--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,10 @@
+.addnotes {
+    width: 600px;
+}
+
 
 @media(max-width: 600px){
-    .respo{
-        padding-left: 0.5rem;
+    .addnotes {
+        width: auto;
     }
 }
