--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,7 +2,7 @@
   width: auto;
   height: 80vh;
   font-family: "Poppins", sans-serif;
-  background-image: url("../about.jpg");
+  background-image: url("../images/about.jpg");
   background-size: cover;
   background-position: center;
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .note-img{
